Upgrade to patternfly 2020.11

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 <head>
   <script type="text/javascript" src="<%= htmlWebpackPlugin.options.PUBLIC_PATH + 'config.js' %>"></script>
   <meta charset="utf-8">
-  <title>Patternfly Seed</title>
-  <meta id="appName" name="application-name" content="Patternfly Seed">
+  <title>Inmanta Web Console</title>
+  <meta id="appName" name="application-name" content="Inmanta Web Console">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="https://www.patternfly.org/components/patternfly/dist/img/favicon.ico">
 </head>
