--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-  <script type="text/javascript" src="<%= htmlWebpackPlugin.options.PUBLIC_PATH + 'config.js' %>"></script>
+  <script type="text/javascript" src="config.js"></script>
   <meta charset="utf-8">
   <title>Inmanta Web Console</title>
   <meta id="appName" name="application-name" content="Inmanta Web Console">
